--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unnamed-card-game",
+  "name": "beyond-the-rift-dbg",
   "author": {
     "name": "David Brad",
     "email": "davidbrad.015@gmail.com"
