--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -181,5 +181,9 @@
 "editor.minimap.renderCharacters": false,
 "editor.minimap.side": "left",
 "editor.minimap.showSlider": "always",
-"editor.minimap.enabled": false
+"editor.minimap.enabled": false,
+"typescript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true,
+"typescript.format.placeOpenBraceOnNewLineForControlBlocks": true,
+"typescript.format.placeOpenBraceOnNewLineForFunctions": true,
+"editor.formatOnSave": true
 }
