--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,14 +13,14 @@
     {
       "label": "Watch Static Files",
       "type": "shell",
-      "command": "./node_modules/.bin/gulp",
+      "command": ".\\node_modules\\.bin\\gulp",
       "args": ["watch", "--env", "development"],
       "group": "build"
     },
     {
       "label": "Webpack",
       "type": "shell",
-      "command": "./node_modules/.bin/webpack-dev-server",
+      "command": ".\\node_modules\\.bin\\webpack-dev-server",
       "args": ["--open", "--config", "webpack.dev.js"],
       "group": "build"
     },
